--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.10",
     "@types/uuid": "^9.0.1",
@@ -17,11 +19,14 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.0.0",
+    "bcrypt": "^5.1.0",
     "builder-pattern": "^2.2.0",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "sharp": "^0.32.0",
